# mcpp

./: .dockerignore  .gitignore  .gitmodules  .pypirc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg
examples/data/: source
src/mcpp/: __init__.py  __main__.py  additional.py  complexity.py  config.py  erik.py  felix.py  mcpp.py  memory.py  parse.py  queries.py  setup.py  smell.py  tree.py  vulnerability.py
src/mcpp/assets/: config.yaml
