[project]
name = "mcpp"
version = "1.3.2"
description = "McCabe++ (mcpp): cyclomatic complexity and other vulnerability-related code metrics"
readme = "README.md"
authors = [{name = "Lukas Pirch", email="lukas.pirch@tu-berlin.de"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["vulnerability", "code metric", "static analysis"]
requires-python = ">=3.9,<3.14"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
mcpp = "mcpp.__main__:main"

[tool.setuptools.package-data]
mcpp = ["assets/*.yaml"]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]
line-length = 120