[metadata]
name = mcpp
version = 0.1.0

[options]
zip_safe = False
include_package_data=True
package_dir=
    =src
packages=find:

install_requires =
    hydra-core==1.3.2
    tree-sitter==0.21.0
    tqdm==4.66.1

[options.packages.find]
where=src


[options.entry_points]
console_scripts = 
    setup = mcpp.setup:main
    mcpp = mcpp.__main__:main
